exports[`test creates a RECEIVE_POKEMON_DETAIL action 1`] = `
Object {
  "pokemon": Object {
    "abilities": Array [
      Object {
        "ability": Object {
          "name": "solar-power",
          "url": "https://pokeapi.co/api/v2/ability/94/",
        },
        "is_hidden": true,
        "slot": 3,
      },
      Object {
        "ability": Object {
          "name": "blaze",
          "url": "https://pokeapi.co/api/v2/ability/66/",
        },
        "is_hidden": false,
        "slot": 1,
      },
    ],
    "base_experience": 240,
    "forms": Array [
      Object {
        "name": "charizard",
        "url": "https://pokeapi.co/api/v2/pokemon-form/6/",
      },
    ],
    "game_indices": Array [
      Object {
        "game_index": 6,
        "version": Object {
          "name": "white-2",
          "url": "https://pokeapi.co/api/v2/version/22/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "black-2",
          "url": "https://pokeapi.co/api/v2/version/21/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "white",
          "url": "https://pokeapi.co/api/v2/version/18/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "black",
          "url": "https://pokeapi.co/api/v2/version/17/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "soulsilver",
          "url": "https://pokeapi.co/api/v2/version/16/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "heartgold",
          "url": "https://pokeapi.co/api/v2/version/15/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "platinum",
          "url": "https://pokeapi.co/api/v2/version/14/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "pearl",
          "url": "https://pokeapi.co/api/v2/version/13/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "diamond",
          "url": "https://pokeapi.co/api/v2/version/12/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "leafgreen",
          "url": "https://pokeapi.co/api/v2/version/11/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "firered",
          "url": "https://pokeapi.co/api/v2/version/10/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "emerald",
          "url": "https://pokeapi.co/api/v2/version/9/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "sapphire",
          "url": "https://pokeapi.co/api/v2/version/8/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "ruby",
          "url": "https://pokeapi.co/api/v2/version/7/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "crystal",
          "url": "https://pokeapi.co/api/v2/version/6/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "silver",
          "url": "https://pokeapi.co/api/v2/version/5/",
        },
      },
      Object {
        "game_index": 6,
        "version": Object {
          "name": "gold",
          "url": "https://pokeapi.co/api/v2/version/4/",
        },
      },
      Object {
        "game_index": 180,
        "version": Object {
          "name": "yellow",
          "url": "https://pokeapi.co/api/v2/version/3/",
        },
      },
      Object {
        "game_index": 180,
        "version": Object {
          "name": "blue",
          "url": "https://pokeapi.co/api/v2/version/2/",
        },
      },
      Object {
        "game_index": 180,
        "version": Object {
          "name": "red",
          "url": "https://pokeapi.co/api/v2/version/1/",
        },
      },
    ],
    "height": 17,
    "held_items": Array [],
    "id": 6,
    "is_default": true,
    "location_area_encounters": "/api/v2/pokemon/6/encounters",
    "name": "charizard",
    "order": 7,
    "species": Object {
      "name": "charizard",
      "url": "https://pokeapi.co/api/v2/pokemon-species/6/",
    },
    "sprites": Object {
      "back_default": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/6.png",
      "back_female": null,
      "back_shiny": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/shiny/6.png",
      "back_shiny_female": null,
      "front_default": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png",
      "front_female": null,
      "front_shiny": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/6.png",
      "front_shiny_female": null,
    },
    "stats": Array [
      Object {
        "base_stat": 100,
        "effort": 0,
        "stat": Object {
          "name": "speed",
          "url": "https://pokeapi.co/api/v2/stat/6/",
        },
      },
      Object {
        "base_stat": 85,
        "effort": 0,
        "stat": Object {
          "name": "special-defense",
          "url": "https://pokeapi.co/api/v2/stat/5/",
        },
      },
      Object {
        "base_stat": 109,
        "effort": 3,
        "stat": Object {
          "name": "special-attack",
          "url": "https://pokeapi.co/api/v2/stat/4/",
        },
      },
      Object {
        "base_stat": 78,
        "effort": 0,
        "stat": Object {
          "name": "defense",
          "url": "https://pokeapi.co/api/v2/stat/3/",
        },
      },
      Object {
        "base_stat": 84,
        "effort": 0,
        "stat": Object {
          "name": "attack",
          "url": "https://pokeapi.co/api/v2/stat/2/",
        },
      },
      Object {
        "base_stat": 78,
        "effort": 0,
        "stat": Object {
          "name": "hp",
          "url": "https://pokeapi.co/api/v2/stat/1/",
        },
      },
    ],
    "types": Array [
      Object {
        "slot": 2,
        "type": Object {
          "name": "flying",
          "url": "https://pokeapi.co/api/v2/type/3/",
        },
      },
      Object {
        "slot": 1,
        "type": Object {
          "name": "fire",
          "url": "https://pokeapi.co/api/v2/type/10/",
        },
      },
    ],
    "weight": 905,
  },
  "type": "RECEIVE_POKEMON_DETAIL",
}
`;

exports[`test creates a REQUEST_POKEMON_DETAIL action 1`] = `
Object {
  "type": "REQUEST_POKEMON_DETAIL",
}
`;

exports[`test fetches pokemon detail 1`] = `
Array [
  Object {
    "type": "REQUEST_POKEMON_DETAIL",
  },
  Object {
    "pokemon": Object {
      "abilities": Array [
        Object {
          "ability": Object {
            "name": "solar-power",
            "url": "https://pokeapi.co/api/v2/ability/94/",
          },
          "is_hidden": true,
          "slot": 3,
        },
        Object {
          "ability": Object {
            "name": "blaze",
            "url": "https://pokeapi.co/api/v2/ability/66/",
          },
          "is_hidden": false,
          "slot": 1,
        },
      ],
      "base_experience": 240,
      "forms": Array [
        Object {
          "name": "charizard",
          "url": "https://pokeapi.co/api/v2/pokemon-form/6/",
        },
      ],
      "game_indices": Array [
        Object {
          "game_index": 6,
          "version": Object {
            "name": "white-2",
            "url": "https://pokeapi.co/api/v2/version/22/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "black-2",
            "url": "https://pokeapi.co/api/v2/version/21/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "white",
            "url": "https://pokeapi.co/api/v2/version/18/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "black",
            "url": "https://pokeapi.co/api/v2/version/17/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "soulsilver",
            "url": "https://pokeapi.co/api/v2/version/16/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "heartgold",
            "url": "https://pokeapi.co/api/v2/version/15/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "platinum",
            "url": "https://pokeapi.co/api/v2/version/14/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "pearl",
            "url": "https://pokeapi.co/api/v2/version/13/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "diamond",
            "url": "https://pokeapi.co/api/v2/version/12/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "leafgreen",
            "url": "https://pokeapi.co/api/v2/version/11/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "firered",
            "url": "https://pokeapi.co/api/v2/version/10/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "emerald",
            "url": "https://pokeapi.co/api/v2/version/9/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "sapphire",
            "url": "https://pokeapi.co/api/v2/version/8/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "ruby",
            "url": "https://pokeapi.co/api/v2/version/7/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "crystal",
            "url": "https://pokeapi.co/api/v2/version/6/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "silver",
            "url": "https://pokeapi.co/api/v2/version/5/",
          },
        },
        Object {
          "game_index": 6,
          "version": Object {
            "name": "gold",
            "url": "https://pokeapi.co/api/v2/version/4/",
          },
        },
        Object {
          "game_index": 180,
          "version": Object {
            "name": "yellow",
            "url": "https://pokeapi.co/api/v2/version/3/",
          },
        },
        Object {
          "game_index": 180,
          "version": Object {
            "name": "blue",
            "url": "https://pokeapi.co/api/v2/version/2/",
          },
        },
        Object {
          "game_index": 180,
          "version": Object {
            "name": "red",
            "url": "https://pokeapi.co/api/v2/version/1/",
          },
        },
      ],
      "height": 17,
      "held_items": Array [],
      "id": 6,
      "is_default": true,
      "location_area_encounters": "/api/v2/pokemon/6/encounters",
      "name": "charizard",
      "order": 7,
      "species": Object {
        "name": "charizard",
        "url": "https://pokeapi.co/api/v2/pokemon-species/6/",
      },
      "sprites": Object {
        "back_default": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/6.png",
        "back_female": null,
        "back_shiny": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/shiny/6.png",
        "back_shiny_female": null,
        "front_default": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png",
        "front_female": null,
        "front_shiny": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/6.png",
        "front_shiny_female": null,
      },
      "stats": Array [
        Object {
          "base_stat": 100,
          "effort": 0,
          "stat": Object {
            "name": "speed",
            "url": "https://pokeapi.co/api/v2/stat/6/",
          },
        },
        Object {
          "base_stat": 85,
          "effort": 0,
          "stat": Object {
            "name": "special-defense",
            "url": "https://pokeapi.co/api/v2/stat/5/",
          },
        },
        Object {
          "base_stat": 109,
          "effort": 3,
          "stat": Object {
            "name": "special-attack",
            "url": "https://pokeapi.co/api/v2/stat/4/",
          },
        },
        Object {
          "base_stat": 78,
          "effort": 0,
          "stat": Object {
            "name": "defense",
            "url": "https://pokeapi.co/api/v2/stat/3/",
          },
        },
        Object {
          "base_stat": 84,
          "effort": 0,
          "stat": Object {
            "name": "attack",
            "url": "https://pokeapi.co/api/v2/stat/2/",
          },
        },
        Object {
          "base_stat": 78,
          "effort": 0,
          "stat": Object {
            "name": "hp",
            "url": "https://pokeapi.co/api/v2/stat/1/",
          },
        },
      ],
      "types": Array [
        Object {
          "slot": 2,
          "type": Object {
            "name": "flying",
            "url": "https://pokeapi.co/api/v2/type/3/",
          },
        },
        Object {
          "slot": 1,
          "type": Object {
            "name": "fire",
            "url": "https://pokeapi.co/api/v2/type/10/",
          },
        },
      ],
      "weight": 905,
    },
    "type": "RECEIVE_POKEMON_DETAIL",
  },
]
`;
